--- a/Project2/sdi-project2.html
+++ b/Project2/sdi-project2.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>FULL NAME :: Project 2 :: SDI TERMNUMBER</title>
+    <title>Houston Bennett :: Project 2 :: SDI 1211</title>
     <link rel="stylesheet" href="sdi.css" type="text/css" />
     <meta charset="UTF-8">
 </head>
 <body>
 <header>
-    <h1>SDI TERMNUMBER: FULL NAME</h1>
+    <h1>SDI 1211: Houston Bennett</h1>
     <h2>Project 2</h2>
 </header>
 <article>
-<p>In this space you should provide a short (one paragraph) explanation of your theme and why you chose it.</p>
-<p>You may also use this space to explain any elements of your code story that may not be entirely clear.  For example, if your theme is thirteenth century Italian poetry, not everyone may be familiar with that.</p>
-<p>Don't forget to replace all of the capitalized elements in this template with your information.  Your term number should be in a <em>yymm</em> format, including the year and the month.</p>
+<p>After last weeks battle with the Kolbold. The player is taken hostage and forced to fight in an arena. The player fights
+until he is dead or until the monsters run out. Each battle is pretty much the same. The combatants take turns hurting each other
+until one has no more HP left. Then there is a day of rest, followed by the next battle.</p>
+
 </article>
 <footer>
-    <p>COMPLETION DATE, FULL NAME</p>
+    <p>11/29/2012, Houston Bennett</p>
 </footer>
 <script type="text/javascript" src="Bennett_Houston_assignment2.js"></script>
 </body>
