Started with string separator change.

--- a/Project4/sdi-project4.html
+++ b/Project4/sdi-project4.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>FULL NAME :: Project 2 :: SDI TERMNUMBER</title>
+    <title>Houston Bennett :: Project 4 :: SDI 1211</title>
     <link rel="stylesheet" href="sdi.css" type="text/css" />
     <meta charset="UTF-8">
 </head>
 <body>
 <header>
-    <h1>SDI TERMNUMBER: FULL NAME</h1>
-    <h2>Project 2</h2>
+    <h1>SDI 1211: Houston Bennett</h1>
+    <h2>Project 4</h2>
 </header>
 <article>
 <p>In this space you should provide a short (one paragraph) explanation of your theme and why you chose it.</p>
@@ -16,7 +16,7 @@
 <p>Don't forget to replace all of the capitalized elements in this template with your information.  Your term number should be in a <em>yymm</em> format, including the year and the month.</p>
 </article>
 <footer>
-    <p>COMPLETION DATE, FULL NAME</p>
+    <p>12/13/2012, Houston Bennett</p>
 </footer>
 <script type="text/javascript" src="rename-me.js"></script>
 </body>
