--- a/Project4/sdi-project4.html
+++ b/Project4/sdi-project4.html
@@ -18,6 +18,6 @@
 <footer>
     <p>12/13/2012, Houston Bennett</p>
 </footer>
-<script type="text/javascript" src="rename-me.js"></script>
+<script type="text/javascript" src="Bennett_Houston_assignment4.js"></script>
 </body>
 </html>
