--- a/VFW/Project 1/Bennett_Houston_Project1/index.html
+++ b/VFW/Project 1/Bennett_Houston_Project1/index.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+        <!-- Houston Bennett -->
+        <!-- Project 1 d20 Inspired Character creator -->
+        <!-- Term 0113 -->
 <html>
     <!-- Document Header -->
     <head>
@@ -6,7 +9,7 @@
         <!-- Meta content gives the browser some information about our document -->
         <meta charset="utf-8" />
         <meta name="description" content="Our very first HTML5 document. How exciting!"/>
-        <meta name="keywords" content="html5, MobDev, Full Sail University" />
+        <meta name="keywords" content="d20, char, character, creator,D&D" />
 
         <!-- Allows search engine robots to index our page in a search engine and follow
         (continue reading through) links on our page. -->
@@ -21,8 +24,8 @@
         <!-- Allows content to size correctly for droids too. -->
         <meta name="viewport" content="target-densitydpi=device-dpi" />
 
-        <!-- For other phones or old feature phones that don't support the "viewport" -->
-        <!-- HandheldFriendly is interpreted by mobiles browsers and spiders as an indicator
+        <!-- For other phones or old feature phones that don't support the "viewport"
+         HandheldFriendly is interpreted by mobiles browsers and spiders as an indicator
         of mobile markup and a directive to display without scaling-->
         <meta name="HandheldFriendly" content="True">
 
@@ -39,8 +42,10 @@
         <!-- Call JavaScript file -->
         <script src="s/main.js" type="text/javascript"></script>
     </head>
+
     <!-- Document Body -->
     <body>
-
+        <h1>Houston's d20 Inspired Character Creator!</h1>
+        <a href="addItem.html">Create a Character by Clicking Here!</a>
     </body>
 </html>
