--- a/VFW/Project 1/Bennett_Houston_Project1/index.html
+++ b/VFW/Project 1/Bennett_Houston_Project1/index.html
@@ -34,7 +34,7 @@
         <meta name="MobileOptimized" content="320" />
 
         <!--Document Title -->
-        <title>My First HTML 5 Document</title>
+        <title>Houston's d20 Inspired Character Creator!</title>
 
         <!-- Import CSS Styles -->
         <link href="css/styles.css" rel="stylesheet" type="text/css" />
@@ -42,10 +42,11 @@
         <!-- Call JavaScript file -->
         <script src="s/main.js" type="text/javascript"></script>
     </head>
-
     <!-- Document Body -->
     <body>
-        <h1>Houston's d20 Inspired Character Creator!</h1>
-        <a href="addItem.html">Create a Character by Clicking Here!</a>
+        <h1>Create and Save Your d20 Characters!</h1>
+        <h2>
+            <a href="addItem.html">Create a Character by Clicking Here!</a>
+        </h2>
     </body>
 </html>
