--- a/VFW/Project 1/Bennett_Houston_Project1/addItem.html
+++ b/VFW/Project 1/Bennett_Houston_Project1/addItem.html
@@ -54,6 +54,7 @@
 
             <legend>Basic Info</legend>
             <ul>
+                <li><label for="charCreateDate">Creation Date: </label><input type="date" id="charCreateDate"/></li>
                 <li><label for="charName" >Character Name: </label><input type="text" id="charName" /> </li>
                 <li><label for="charRace">Race:  </label><input type="text" id="charRace" /> </li>
                 <li>
