*IGNORE*Small changes to project 1

--- a/VFW/Project 1/Bennett_Houston_Project1/addItem.html
+++ b/VFW/Project 1/Bennett_Houston_Project1/addItem.html
@@ -40,7 +40,7 @@
     <link href="css/styles.css" rel="stylesheet" type="text/css" />
 
     <!-- Call JavaScript file -->
-    <script src="s/main.js" type="text/javascript"></script>
+    <script src="js/main.js" type="text/javascript"></script>
 </head>
 
 <!-- Document Body -->
@@ -49,6 +49,7 @@
 
 
     <form action="#" method="post">
+
         <!-- Basic Character Info. -->
         <fieldset>
 
@@ -67,7 +68,7 @@
                         <option value="Giant">Giant</option>
                     </select>
                 </li>
-                <li><label for="charAge">Age:</label><input type="range" id="charAge" /> </li>
+                <li><label for="charAge">Age: </label><input type="range" id="charAge" /> </li>
                 <li>Gender:
                     <ul>
                         <li><input type="radio" checked value="Male" id="male" name="sex"/><label for="male"> Male</label> </li>
@@ -77,6 +78,7 @@
                 </li>
             </ul>
         </fieldset>
+
         <!-- Character Attributes -->
         <fieldset>
             <legend>Attributes</legend>
@@ -91,12 +93,14 @@
             </ul>
 
         </fieldset>
+
         <!-- Additional Char Info -->
         <fieldset>
             <legend>Biography</legend>
             <textarea placeholder="Enter your character's back story here!"></textarea>
 
         </fieldset>
+
     </form>
 <!-- Links at the bottom -->
     <footer>
