--- a/VFW/Project 2/Bennett_Houston_Project2/addItem.html
+++ b/VFW/Project 2/Bennett_Houston_Project2/addItem.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- Houston Bennett -->
-<!-- Project 1 d20 Inspired Character creator -->
+<!-- Project 2 d20 Inspired Character creator -->
 <!-- Term 0113 -->
 <html>
 <!-- Document Header -->
@@ -39,14 +39,15 @@
     <!-- Import CSS Styles -->
     <link href="css/styles.css" rel="stylesheet" type="text/css" />
 
-    <!-- Call JavaScript file -->
-    <script src="js/main.js" type="text/javascript"></script>
+
 </head>
 
 <!-- Document Body -->
+
 <body>
     <h1>Add a Character</h1>
 
+<div id="content">
 
     <form action="#" method="post">
 
@@ -58,16 +59,7 @@
                 <li><label for="charCreateDate">Creation Date: </label><input type="date" id="charCreateDate"/></li>
                 <li><label for="charName" >Character Name: </label><input type="text" id="charName" /> </li>
                 <li><label for="charRace">Race:  </label><input type="text" id="charRace" /> </li>
-                <li>
-                    <label for="charSize">Size: </label>
-                    <select id="charSize">
-                        <option value="Tiny">Tiny</option>
-                        <option value="Small">Small</option>
-                        <option value="Medium">Medium</option>
-                        <option value="Large">Large</option>
-                        <option value="Giant">Giant</option>
-                    </select>
-                </li>
+                <li id="dropdown"><label for="dropdown">Size: </label></li>
                 <li><label for="charAge">Age: </label><input type="range" id="charAge" /> </li>
                 <li>Gender:
                     <ul>
@@ -80,15 +72,17 @@
         </fieldset>
 
         <!-- Character Attributes -->
+
         <fieldset>
             <legend>Attributes</legend>
-            <ul>
-                <li><label for="charStr" >Strength: </label><input type="text" id="charStr" /> </li>
-                <li><label for="charCon">Constitution:  </label><input type="text" id="charCon" /> </li>
-                <li><label for="charDex">Dexterity:  </label><input type="text" id="charDex" /> </li>
-                <li><label for="charInt">Intelligence:  </label><input type="text" id="charInt" /> </li>
-                <li><label for="charWis">Wisdom:  </label><input type="text" id="charWis" /> </li>
-                <li><label for="charCha">Charisma:  </label><input type="text" id="charCha" /> </li>
+            <ul id="attributes">
+
+                <li><label for="charStr">Strength: </label><input type="text" id="charStr" name="textbox"/> </li>
+                <li><label for="charCon">Constitution:  </label><input type="text" id="charCon" name="textbox"/> </li>
+                <li><label for="charDex">Dexterity:  </label><input type="text" id="charDex" name="textbox"/> </li>
+                <li><label for="charInt">Intelligence:  </label><input type="text" id="charInt" name="textbox"/> </li>
+                <li><label for="charWis">Wisdom:  </label><input type="text" id="charWis" name="textbox"/> </li>
+                <li><label for="charCha">Charisma:  </label><input type="text" id="charCha" name="textbox"/> </li>
 
             </ul>
 
@@ -104,12 +98,17 @@
     </form>
 <!-- Links at the bottom -->
     <footer>
-        <input type="submit"/>
+        <input type="button" id="SubmitBtn" name="SubmitBtn" value="Submit"/>
+
         <nav>
-            <a href="#">Delete ALL Characters</a>
-            <a href="#">View Stored Characters</a>
+            <a href="#" id="DeleteAll">Delete ALL Characters</a>
+            <a href="#" id="ViewAll">View Stored Characters</a>
         </nav>
     </footer>
 <input type="hidden" value="This will be a random number later." />
+</div>
 </body>
+</content>
+<!-- Call JavaScript file -->
+<script src="js/main.js" type="text/javascript"></script>
 </html>
