Radio buttons and local storage work

--- a/VFW/Project 2/Bennett_Houston_Project2/addItem.html
+++ b/VFW/Project 2/Bennett_Houston_Project2/addItem.html
@@ -91,7 +91,7 @@
         <!-- Additional Char Info -->
         <fieldset>
             <legend>Biography</legend>
-            <textarea placeholder="Enter your character's back story here!"></textarea>
+            <textarea placeholder="Enter your character's back story here!" id="charBio"></textarea>
 
         </fieldset>
 
