Last little bit. Everything seems to work.

--- a/VFW/Project 2/Bennett_Houston_Project2/addItem.html
+++ b/VFW/Project 2/Bennett_Houston_Project2/addItem.html
@@ -43,13 +43,13 @@
 </head>
 
 <!-- Document Body -->
-
+<content>
 <body>
     <h1>Add a Character</h1>
 
 <div id="content">
 
-    <form action="#" method="post">
+    <form action="#" method="post" id="charForm">
 
         <!-- Basic Character Info. -->
         <fieldset>
@@ -103,10 +103,13 @@
         <nav>
             <a href="#" id="DeleteAll">Delete ALL Characters</a>
             <a href="#" id="ViewAll">View Stored Characters</a>
+            <a href='addItem.html' id="NewChar" style='display: none'>Add Another Character</a>
         </nav>
     </footer>
 <input type="hidden" value="This will be a random number later." />
 </div>
+
+
 </body>
 </content>
 <!-- Call JavaScript file -->
