--- a/VFW/Project 2/Bennett_Houston_Project2/index.html
+++ b/VFW/Project 2/Bennett_Houston_Project2/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- Houston Bennett -->
-<!-- Project 1 d20 Inspired Character creator -->
+<!-- d20 Inspired Character creator -->
 <!-- Term 0113 -->
 <html>
     <!-- Document Header -->
