Finished loading default data code.

--- a/VFW/Project 4/Bennett_Houston_Project4/addItem.html
+++ b/VFW/Project 4/Bennett_Houston_Project4/addItem.html
@@ -44,12 +44,12 @@
 
 <!-- Document Body -->
 <content>
-<body>
+<body style="background-image: url('/img/paperBack.jpg')">
     <h1>Add a Character</h1>
 
 <div id="content">
 
-    <form action="#" method="post" id="charForm">
+    <form action="#" method="post" id="charForm" >
 
         <!-- Basic Character Info. -->
         <fieldset>
@@ -114,5 +114,7 @@
 </body>
 </content>
 <!-- Call JavaScript file -->
+<script src='js/json.js' type="text/javascript"></script>
 <script src="js/main.js" type="text/javascript"></script>
+
 </html>
