--- a/VFW/Project 4/Bennett_Houston_Project4/addItem.html
+++ b/VFW/Project 4/Bennett_Houston_Project4/addItem.html
@@ -44,7 +44,7 @@
 
 <!-- Document Body -->
 <content>
-<body style="background-image: url('images/bg.jpg')">
+<body >
     <h1>Add a Character</h1>
 
 <div id="content">
